cyclonedx-bom/tests/snapshots/specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-component-ref-1.3.xml.snap
---
source: cyclonedx-bom/tests/specification_tests.rs
expression: bom_output
input_file: cyclonedx-bom/tests/data/1.3/valid-component-ref-1.3.xml
---
<?xml version="1.0" encoding="utf-8"?>
<bom xmlns="http://cyclonedx.org/schema/bom/1.3" serialNumber="urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79" version="1">
  <components>
    <component type="library" bom-ref="123">
      <name>acme-library</name>
      <version>1.0.0</version>
      <components>
        <component type="library" bom-ref="456">
          <name>acme-library</name>
          <version>1.0.0</version>
        </component>
      </components>
    </component>
    <component type="library" bom-ref="789">
      <name>acme-library</name>
      <version>1.0.0</version>
    </component>
  </components>
</bom>
