cyclonedx-bom/tests/snapshots/specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-component-types-1.3.xml.snap
---
source: cyclonedx-bom/tests/specification_tests.rs
expression: bom_output
input_file: cyclonedx-bom/tests/data/1.3/valid-component-types-1.3.xml
---
<?xml version="1.0" encoding="utf-8"?>
<bom xmlns="http://cyclonedx.org/schema/bom/1.3" serialNumber="urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79" version="1">
  <components>
    <component type="application">
      <name>application-a</name>
      <version>1.0</version>
    </component>
    <component type="library">
      <name>library-a</name>
      <version>1.0</version>
    </component>
    <component type="framework">
      <name>framework-a</name>
      <version>1.0</version>
    </component>
    <component type="container">
      <name>container-a</name>
      <version>1.0</version>
    </component>
    <component type="operating-system">
      <name>operating-system-a</name>
      <version>1.0</version>
    </component>
    <component type="firmware">
      <name>firmware-a</name>
      <version>1.0</version>
    </component>
    <component type="device">
      <name>device-a</name>
      <version>1.0</version>
    </component>
    <component type="file">
      <name>file-a</name>
      <version>1.0</version>
    </component>
  </components>
</bom>
